--- a/Hangman/Hangman/Views/Home/GameField.cshtml
+++ b/Hangman/Hangman/Views/Home/GameField.cshtml
@@ -1,4 +1,22 @@
-﻿<h4 id="select-letter-title">Select a letter</h4>
-<div id="letters-container"></div>
-<div id="blank-lines"></div>
-<h4 id="definition"></h4>
+﻿<div class="row">
+    <div class="col-md-6">
+        <h4 id="select-letter-title">Select a letter</h4>
+        <div id="letters-container"></div>
+    </div>
+    <div class="col-md-6">
+        <div id="hangman-drawing">
+            <div id="hanging-tree">
+                <div id="tree0"></div><div id="tree1"></div><div id="tree2"></div><div id="tree3"></div>
+            </div>
+            <div id="man">
+                <div id="head"></div><div id="body"></div><div id="right-arm"></div><div id="left-arm"></div><div id="right-leg"></div><div id="left-leg"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div id="blank-lines"></div>
+        <div id="definition-container"><h4 id="definition"></h4></div>      
+    </div>
+</div>
