--- a/Hangman/Hangman/Content/Site.css
+++ b/Hangman/Hangman/Content/Site.css
@@ -108,9 +108,6 @@ textarea {
     }
 
 #letters-container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 40vw;
     text-align: center;
 }
 
@@ -143,6 +140,18 @@ h4 { /* level buttons description */
     vertical-align: middle;
 }
 
+#definition-container {
+    text-align: center;
+    border: 2px white dashed;
+    padding: 10px;
+    border-radius: 50px;
+    text-align: center;
+}
+
+#definition-container h4{
+    display: block;
+}
+
 #select-letter-title {
     color: white;
     font-size: 20px;
@@ -154,4 +163,52 @@ h4 { /* level buttons description */
 img {
     position: absolute;
     right: 10vw;
+}
+
+#hangman-drawing {
+    position: relative;
+    height: 310px;
+    margin-top: 40px;
+}
+
+#tree0 {
+    background-color: #1E1E1E;
+    width: 200px;
+    height: 2px;
+    position: absolute;
+    top: 300px;
+    left: 100px
+}
+
+#tree1 {
+    background-color: #1E1E1E;
+    width: 2px;
+    height: 300px;
+    position: absolute;
+    left: 100px;
+}
+
+#tree2 {
+    background-color: #1E1E1E;
+    width: 2px;
+    height: 20px;
+    position: absolute;
+    left: 249px;
+    top: 0;
+}
+
+#tree3 {
+    background-color: #1E1E1E;
+    width: 150px;
+    height: 2px;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
+
+@media (min-width: 992px) {
+    .col-md-6 {
+        width: 50%;
+        padding: 0 40px;
+    }
 }
