adding new controllers;
new modals;
game is finished, only some smoothing needed;

--- a/Hangman/Hangman/Views/Shared/_Layout.cshtml
+++ b/Hangman/Hangman/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet'>
-    <title>@ViewBag.Title Int elligence;</title>
+    <title>Int elligence;</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -12,18 +12,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand">elligence;<small>Hangman for developers</small></a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                <a href="@Url.Action("", "Home", "Home")"class="navbar-brand">elligence;<small>Hangman for developers</small></a>
             </div>
         </div>
     </div>
