--- a/Hangman/Hangman/Content/Site.css
+++ b/Hangman/Hangman/Content/Site.css
@@ -7,7 +7,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 40px;
+    margin-top: 80px;
 }
 
 .dl-horizontal dt {
@@ -36,6 +36,16 @@ textarea {
     margin-bottom: 0;
 }
 
+.navbar-header {
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+.navbar-brand {
+    float: none;
+}
+
 .navbar-brand:before {
     color: #63B5FF;
     content: "Int ";
@@ -53,7 +63,6 @@ textarea {
     display: block;
     margin-top: 5px;
     font-size: 15px;
-    margin-left: 5px;
 }
 
 
@@ -66,7 +75,7 @@ textarea {
 }
 
 
-.levelButton {
+.levelButton, .modal-button {
     display: inline-block;
     border-radius: 10px;
     background-color: white;
@@ -113,7 +122,7 @@ textarea {
 
 #blank-lines {
     margin: 5px;
-    margin-top: 50px;
+    margin-top: 90px;
     letter-spacing: 8px;
     font-size: 50px;
     text-align: center;
@@ -141,16 +150,18 @@ h4 { /* level buttons description */
 }
 
 #definition-container {
+    background-color: #3ee04e;
     text-align: center;
     border: 2px white dashed;
-    padding: 10px;
+    padding: 20px 50px;
     border-radius: 50px;
     text-align: center;
 }
 
-#definition-container h4{
-    display: block;
-}
+    #definition-container h4 {
+        display: block;
+        color: #333333;
+    }
 
 #select-letter-title {
     color: white;
@@ -163,6 +174,7 @@ h4 { /* level buttons description */
 img {
     position: absolute;
     right: 10vw;
+    top: 90px;
 }
 
 #hangman-drawing {
@@ -172,7 +184,7 @@ img {
 }
 
 #tree0 {
-    background-color: #1E1E1E;
+    background-color: #333333;
     width: 200px;
     height: 2px;
     position: absolute;
@@ -181,24 +193,34 @@ img {
 }
 
 #tree1 {
-    background-color: #1E1E1E;
+    background-color: #333333;
+    width: 52px;
+    height: 2px;
+    position: absolute;
+    top: 18px;
+    left: 93px;
+    transform: rotate(-45deg);
+}
+
+#tree2 {
+    background-color: #333333;
     width: 2px;
     height: 300px;
     position: absolute;
     left: 100px;
 }
 
-#tree2 {
-    background-color: #1E1E1E;
+#tree3 {
+    background-color: #333333;
     width: 2px;
     height: 20px;
     position: absolute;
-    left: 249px;
+    left: 250px;
     top: 0;
 }
 
-#tree3 {
-    background-color: #1E1E1E;
+#tree4 {
+    background-color: #333333;
     width: 150px;
     height: 2px;
     position: absolute;
@@ -211,4 +233,103 @@ img {
         width: 50%;
         padding: 0 40px;
     }
+}
+
+#head {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 230px;
+    top: 20px;
+    border: 2px #333333 solid;
+    border-radius: 50px;
+    display: block;
+}
+
+#body {
+    background-color: #333333;
+    width: 2px;
+    height: 80px;
+    position: absolute;
+    left: 250px;
+    top: 60px;
+    display: block;
+}
+
+#right-arm, #left-arm, #right-leg, #left-leg {
+    background-color: #333333;
+    width: 2px;
+    height: 60px;
+    position: absolute;
+    left: 230px;
+    top: 60px;
+    transform: rotate(40deg);
+    display: block;
+}
+
+#left-arm {
+    transform: rotate(-40deg);
+    left: 270px;
+}
+
+#right-leg {
+    top: 133px;
+}
+
+#left-leg {
+    top: 133px;
+    transform: rotate(-40deg);
+    left: 270px;
+}
+
+#game-over-modal .modal-content {
+    background-color: #D4363C;
+}
+
+#win-modal .modal-content {
+    background-color: #3ee04e;
+}
+
+.modal-title {
+    margin: 0;
+    color: white;
+}
+
+.modal-body {
+    position: relative;
+    padding: 10px;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+}
+
+.modal-header {
+    border: none;
+    padding: 15px;
+    text-align: center;
+}
+
+.modal-button {
+    font-size: 25px;
+    color: black;
+    text-align: center;
+    width: 60px;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 0 90px 0 90px
+}
+
+    .modal-button:hover {
+        color: white;
+        text-decoration: none;
+    }
+#yes-btn {
+    float: left;
+}
+    #yes-btn:hover {
+        background-color: #289b2e;
+    }
+
+#no-btn:hover {
+    background-color: #490606;
 }
